cabal-version: 2.4
name: blarney-test
version: 0.1.0.0

flag enable-namer-plugin
  description: Enable namer plugin
  manual: True
  default: False

executable blarney-test
  main-is: Main.hs
  other-modules:
    Blarney.Sharing,
    Blarney.Arbiter,
    Blarney.Ehr,
    TileLink.UncoherentBCache,
    TileLink.Interconnect,
    TileLink.Types,
    TileLink.Utils,
    TileLink.GetPut,
    TileLink.RAM
    TileLink,
    AXI4,
    Utils,
    Alu,
    Cache,
    CPU,
    Instr,
    Uart,
    Core,
    Prediction,
    Spi
  hs-source-dirs: src
  build-depends:
      base
    , blarney
    , blarney-five
    , containers
    , array
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DatatypeContexts
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    OverloadedLabels
    PartialTypeSignatures
    RebindableSyntax
    RecursiveDo
    TypeFamilies
    UndecidableInstances
    AllowAmbiguousTypes
  ghc-options:
    -fno-cse
    -fno-full-laziness
    -Wno-partial-type-signatures
    -Wno-ambiguous-fields
  if flag(enable-namer-plugin)
    build-depends:
      blarney-plugins-namer
    ghc-options:
      -fplugin BlarneyPlugins.Namer
