cabal-version: 2.4
name: blarney-test
version: 0.1.0.0

flag enable-namer-plugin
  description: Enable namer plugin
  manual: True
  default: False

executable blarney-test
  main-is: Main.hs
  other-modules:
    Blarney.Sharing,
    Blarney.Arbiter,
    Blarney.Ehr,
    Blarney.ADT,
    TileLink.UncoherentBCache,
    TileLink.CoherentBCache,
    TileLink.AcquireRelease,
    TileLink.Interconnect,
    TileLink.Broadcast,
    TileLink.Mmio,
    TileLink.Types,
    TileLink.Utils,
    TileLink.GetPut,
    TileLink.RAM,
    TileLink,
    AXI4,
    Utils,
    Alu,
    CSR,
    Cache,
    Clint,
    CPU,
    Instr,
    Uart,
    Core,
    Prediction,
    System,
    Spi
  hs-source-dirs: src
  build-depends:
      base
    , blarney
    , blarney-five
    , containers
    , array
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DatatypeContexts
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    OverloadedLabels
    PartialTypeSignatures
    RebindableSyntax
    RecursiveDo
    TypeFamilies
    UndecidableInstances
    AllowAmbiguousTypes
    FunctionalDependencies
  ghc-options:
    -fno-cse
    -fno-full-laziness
    -Wno-partial-type-signatures
    -Wno-ambiguous-fields
  if flag(enable-namer-plugin)
    build-depends:
      blarney-plugins-namer
    ghc-options:
      -fplugin BlarneyPlugins.Namer
